@@ -7,3 +7,7 @@ belt_braid_sinner-player_warnings=How many vocal warnings the player gets before
 [message]
 belt_braid_sinner-player_punished=__1__ is being burned as a belt braid sinner as a lesson to all!
 belt_braid_sinner-player_warning=__1__ is just getting a warning this time for being a belt braid sinner!
+
+[api-description]
+belt_braid_sinner_purge_surfaces=: Clears all recorded underground belt tiles and recalcualtes them based on current underground belts on map.
+belt_braid_sinner_toggle_debug_render=: toggles a render of tiles flagged as undergrounds on and off.
